[metadata]
name = tomb_routes
author = John Anderson
author_email = johna@gmail.com
summary = A set of sane routing defaults for the Pyramid web framework
description-file = README.rst
home-page = https://github.com/sontek/tomb_routes

[files]
packages =
    tomb_routes

[entry_points]

[pbr]
warnerrors = True

[pytest]
norecursedirs =
    .git
    .tox
    dist
    build
    *.egg

addopts =
    -rxEfs
    --strict
    --doctest-modules
    --doctest-glob \*.rst
    --tb short
    --ignore setup.py

markers =
    unit
    integration
